[TASK-3276] Add club shows API contract and clients
